Добавляет изменение администратором информации о транспорте
