# docs/swagger.yaml
@@ -124,6 +124,51 @@ definitions:
       account:
         $ref: '#/definitions/models.GetAccountOutput'
     type: object
+  models.AdminUpdateTransportInput:
+    properties:
+      canBeRented:
+        type: boolean
+      color:
+        type: string
+      dayPrice:
+        minimum: 1
+        type: number
+      description:
+        type: string
+      identifier:
+        type: string
+      latitude:
+        maximum: 180
+        minimum: -180
+        type: number
+      longitude:
+        maximum: 180
+        minimum: -180
+        type: number
+      minutePrice:
+        minimum: 1
+        type: number
+      model:
+        type: string
+      ownerId:
+        type: string
+      transportType:
+        type: string
+    required:
+    - canBeRented
+    - color
+    - identifier
+    - latitude
+    - longitude
+    - model
+    - ownerId
+    - transportType
+    type: object
+  models.AdminUpdateTransportOutput:
+    properties:
+      transport:
+        $ref: '#/definitions/models.GetTransportOutput'
+    type: object
   models.CreateTransportInput:
     properties:
       canBeRented:
@@ -754,6 +799,50 @@ paths:
       security:
       - BearerAuth: []
       summary: Get transport
+      tags:
+      - admin-transport
+    put:
+      consumes:
+      - application/json
+      description: Update transport by id.
+      parameters:
+      - description: '-'
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: '-'
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.AdminUpdateTransportInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AdminUpdateTransportOutput'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - BearerAuth: []
+      summary: Update transport
       tags:
       - admin-transport
   /Transport:
