# models/transport.go
@@ -110,6 +110,32 @@ type AdminCreateTransportInput struct {
 	DayPrice      *float64 `json:"dayPrice" binding:"min=1"`
 }
 
+func (i *AdminCreateTransportInput) Validate() error {
+	return constants.CheckTransportType(i.TransportType)
+}
+
 type AdminCreateTransportOutput struct {
+	Transport *GetTransportOutput `json:"transport"`
+}
+
+type AdminUpdateTransportInput struct {
+	OwnerID       string   `json:"ownerId" binding:"required"`
+	CanBeRented   bool     `json:"canBeRented" binding:"required"`
+	TransportType string   `json:"transportType" binding:"required"`
+	Model         string   `json:"model" binding:"required"`
+	Color         string   `json:"color" binding:"required"`
+	Identifier    string   `json:"identifier" binding:"required"`
+	Description   *string  `json:"description"`
+	Latitude      *float64 `json:"latitude" binding:"required,min=-180,max=180"`
+	Longitude     *float64 `json:"longitude" binding:"required,min=-180,max=180"`
+	MinutePrice   *float64 `json:"minutePrice" binding:"min=1"`
+	DayPrice      *float64 `json:"dayPrice" binding:"min=1"`
+}
+
+func (i *AdminUpdateTransportInput) Validate() error {
+	return constants.CheckTransportType(i.TransportType)
+}
+
+type AdminUpdateTransportOutput struct {
 	Transport *GetTransportOutput `json:"transport"`
 }
