# pkg/handler/admin_transport.go
@@ -142,14 +142,19 @@ func (h *Handler) AdminCreateTransport(c *gin.Context) {
 		return
 	}
 
+	if err := input.Validate(); err != nil {
+		h.sendInvalidRequest(c, err.Error())
+		return
+	}
+
 	isExist, err := h.services.Transport.IsExist(input.Identifier)
 	if err != nil {
 		h.sendGeneralException(c, serverError)
 		return
 	}
 
-	if !isExist {
-		h.sendInvalidRequest(c, transportIsNotExist)
+	if isExist {
+		h.sendInvalidRequest(c, transportIsExist)
 		return
 	}
 
@@ -173,6 +178,87 @@ func (h *Handler) AdminCreateTransport(c *gin.Context) {
 	}
 
 	h.sendOKWithBody(c, &models.AdminCreateTransportOutput{
+		Transport: &models.GetTransportOutput{
+			OwnerID:       transport.OwnerID,
+			CanBeRented:   transport.CanBeRented,
+			TransportType: transport.TransportType,
+			Model:         transport.Model,
+			Color:         transport.Color,
+			Identifier:    transport.Identifier,
+			Description:   transport.Description,
+			Latitude:      transport.Latitude,
+			Longitude:     transport.Longitude,
+			MinutePrice:   transport.MinutePrice,
+			DayPrice:      transport.DayPrice,
+		},
+	})
+}
+
+// AdminUpdateTransport
+// @Summary      Update transport
+// @Description  Update transport by id.
+// @Tags         admin-transport
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "-"
+// @Param        input body models.AdminUpdateTransportInput true "-"
+// @Success      200  {object}  models.AdminUpdateTransportOutput
+// @Failure      400  {object}  handler.Error
+// @Failure      401  {object}  handler.Error
+// @Failure      403  {object}  handler.Error
+// @Failure      500  {object}  handler.Error
+// @Security     BearerAuth
+// @Router       /Admin/Transport/{id} [put]
+func (h *Handler) AdminUpdateTransport(c *gin.Context) {
+	var input models.AdminUpdateTransportInput
+
+	transportID, err := getStringParam(c, "id")
+	if err != nil {
+		h.sendInvalidRequest(c, err.Error())
+		return
+	}
+
+	if err = c.BindJSON(&input); err != nil {
+		h.sendInvalidRequest(c, err.Error())
+		return
+	}
+
+	if err = input.Validate(); err != nil {
+		h.sendInvalidRequest(c, err.Error())
+		return
+	}
+
+	isExist, err := h.services.Transport.IsExist(input.Identifier)
+	if err != nil {
+		h.sendGeneralException(c, serverError)
+		return
+	}
+
+	if !isExist {
+		h.sendInvalidRequest(c, transportIsNotExist)
+		return
+	}
+
+	transport, err := h.services.Transport.Update(transportID, &models.Transport{
+		OwnerID:       input.OwnerID,
+		CanBeRented:   input.CanBeRented,
+		TransportType: input.TransportType,
+		Model:         input.Model,
+		Color:         input.Color,
+		Identifier:    input.Identifier,
+		Description:   input.Description,
+		Latitude:      *input.Latitude,
+		Longitude:     *input.Longitude,
+		MinutePrice:   input.MinutePrice,
+		DayPrice:      input.DayPrice,
+		IsDeleted:     false,
+	})
+	if err != nil {
+		h.sendGeneralException(c, err.Error())
+		return
+	}
+
+	h.sendOKWithBody(c, &models.AdminUpdateTransportOutput{
 		Transport: &models.GetTransportOutput{
 			OwnerID:       transport.OwnerID,
 			CanBeRented:   transport.CanBeRented,
